[workspace]
members = ["tickflow-parse"]

[package]
name = "tickflow"
authors = ["patataofcourse"]
description = "Rust library to manage Tickflow (Rhythm Heaven bytecode) formats."
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytestream = "0.4"
