[workspace]
members = ["tickflow-parse", "tickflow-binaries"]

[workspace.package]
version = "0.0.1"

[package]
name = "tickflow"
authors = ["patataofcourse"]
description = "Rust library to manage Tickflow (Rhythm Heaven bytecode) formats."
edition = "2021"

version.workspace = true

[dependencies]
bytestream = "0.4"
tickflow-parse = { path = "tickflow-parse" }
tickflow-binaries = { path = "tickflow-binaries" }