[package]
name = "tickflow-binaries"
description = "Binary parser for Tickflow bytecode languages"
edition = "2021"

version.workspace = true

[dependencies]
bytestream = "0.4.1"
serde = { version = "1.0.219", features = ["derive"], optional = true }

[features]
default = ["serde"]
serde = ["dep:serde"]
